--- a/main.html
+++ b/main.html
@@ -77,12 +77,14 @@
       const gl = canvas.getContext('webgl', { xrCompatible: true });
 
 
-      glBinding = new XRWebGLBinding(session, gl);
+      
 
       
       // Initialize a WebXR session using "immersive-ar".
-      session = await navigator.xr.requestSession('immersive-ar', { requiredFeatures: ['hit-test', 'dom-overlay'], domOverlay: { root: document.body } });
+      session = await navigator.xr.requestSession('immersive-ar', { requiredFeatures: ['hit-test', 'dom-overlay', 'camera-access' ], domOverlay: { root: document.body } });
       session.updateRenderState({ baseLayer: new XRWebGLLayer(session, gl) });
+
+	glBinding = new XRWebGLBinding(session, gl);
 
       // Create a reference space for AR.
       const referenceSpace = await session.requestReferenceSpace('local');
