--- a/main.html
+++ b/main.html
@@ -143,7 +143,7 @@
           const view = pose.views[0];
 
 
-	  if !(captureNext) {
+	  if (!captureNext) {
 	  captureNext = true;
           dcamera = view.camera;
 	  camBinding = glBinding.getCameraImage(dcamera);
