--- a/main.html
+++ b/main.html
@@ -174,6 +174,7 @@ if (!captureNext) {
     let context = canvas.getContext('2d');
 
     // Создаем ImageData и устанавливаем данные пикселей
+	        document.getElementById('info').innerText = 'Before ImageData';
     let imageData = new ImageData(new Uint8ClampedArray(readback_pixels), width, height);
     context.putImageData(imageData, 0, 0);
 
