--- a/main.html
+++ b/main.html
@@ -147,62 +147,134 @@ if (!captureNext) {
   captureNext = true;
   dcamera = view.camera;
 
-  // Предполагаем, что dcamera и glBinding уже определены и инициализированы
+  // Получаем текстуру камеры
   const texture = glBinding.getCameraImage(dcamera);
-  const width = dcamera.width; // Ширина изображения
-  const height = dcamera.height; // Высота изображения
+  const width = dcamera.width;
+  const height = dcamera.height;
 
-  // Настройка framebuffer
-  gl.bindTexture(gl.TEXTURE_2D, texture);
-  const framebuffer = gl.createFramebuffer();
+  // Масштабируем изображение, если необходимо
+  const scale = 1; // Коэффициент масштаба, 1 - без масштабирования
+  const scaledWidth = Math.floor(width * scale);
+  const scaledHeight = Math.floor(height * scale);
+  const texture_bytes = scaledWidth * scaledHeight * 4; // Количество байт для RGBA
+
+  // Создаем массив для хранения данных пикселей
+  let readback_pixels = new Uint8Array(texture_bytes);
+  readback_pixels.fill(0);
+
+  // Создаем текстуру для копирования и фреймбуфер
+  let copyTexture = gl.createTexture();
+  gl.bindTexture(gl.TEXTURE_2D, copyTexture);
+  gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, scaledWidth, scaledHeight, 0, gl.RGBA, gl.UNSIGNED_BYTE, null);
+  gl.bindTexture(gl.TEXTURE_2D, null);
+
+  let framebuffer = gl.createFramebuffer();
   gl.bindFramebuffer(gl.FRAMEBUFFER, framebuffer);
-  gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, texture, 0);
+  gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, copyTexture, 0);
 
-  if (gl.checkFramebufferStatus(gl.FRAMEBUFFER) === gl.FRAMEBUFFER_COMPLETE) {
-    // Создаем PBO для асинхронного чтения пикселей
-    const buffer = gl.createBuffer();
-    gl.bindBuffer(gl.PIXEL_PACK_BUFFER, buffer);
-    gl.bufferData(gl.PIXEL_PACK_BUFFER, width * height * 4, gl.STREAM_READ);
-
-    // Читаем пиксели из WebGL
-    gl.readPixels(0, 0, width, height, gl.RGBA, gl.UNSIGNED_BYTE, 0);
-    readPixelsAsync(gl, 0, 0, width, height, gl.RGBA, gl.UNSIGNED_BYTE, new Uint8Array(width * height * 4), buffer)
-      .then(() => {
-        gl.deleteBuffer(buffer);
-        
-        // Создаем <canvas> элемент и устанавливаем его размеры
-        let canvas = document.createElement('canvas');
-        canvas.width = width;
-        canvas.height = height;
-        let context = canvas.getContext('2d');
-
-        // Создаем ImageData и устанавливаем данные пикселей
-        let imageData = new ImageData(new Uint8ClampedArray(new Uint8Array(width * height * 4)), width, height);
-        context.putImageData(imageData, 0, 0);
-
-        // Получаем данные изображения в формате PNG
-        canvas.toBlob((blob) => {
-          // Создаем ссылку на загруженный файл
-          const url = URL.createObjectURL(blob);
-          // Создаем элемент для скачивания файла
-          let link = document.createElement('a');
-          link.href = url;
-          link.download = 'camera_image.png';
-          link.click();
-          // Освобождаем URL-объект
-          URL.revokeObjectURL(url);
-        }, 'image/png');
-
-        // Очистка
-        gl.bindFramebuffer(gl.FRAMEBUFFER, null);
-        gl.deleteFramebuffer(framebuffer);
-      })
-      .catch((error) => {
-        console.error('Error reading pixels:', error);
-      });
-  } else {
-    console.error('Framebuffer is not complete.');
+  if (gl.checkFramebufferStatus(gl.FRAMEBUFFER) !== gl.FRAMEBUFFER_COMPLETE) {
+    console.warn("Framebuffer incomplete!");
+    return false;
   }
+
+  // Устанавливаем шейдеры
+  const vertexShaderSource = `
+    attribute vec4 aVertexPosition;
+    varying vec2 vTexCoord;
+    void main(void) {
+      gl_Position = aVertexPosition;
+      vTexCoord = (aVertexPosition.xy + 1.0) / 2.0;
+    }
+  `;
+  const fragmentShaderSource = `
+    precision mediump float;
+    varying vec2 vTexCoord;
+    uniform sampler2D uSampler;
+    void main(void) {
+      gl_FragColor = texture2D(uSampler, vTexCoord);
+    }
+  `;
+
+  const vertexShader = gl.createShader(gl.VERTEX_SHADER);
+  gl.shaderSource(vertexShader, vertexShaderSource);
+  gl.compileShader(vertexShader);
+  if (!gl.getShaderParameter(vertexShader, gl.COMPILE_STATUS)) {
+    console.error('An error occurred compiling the vertex shader: ' + gl.getShaderInfoLog(vertexShader));
+    gl.deleteShader(vertexShader);
+    return false;
+  }
+
+  const fragmentShader = gl.createShader(gl.FRAGMENT_SHADER);
+  gl.shaderSource(fragmentShader, fragmentShaderSource);
+  gl.compileShader(fragmentShader);
+  if (!gl.getShaderParameter(fragmentShader, gl.COMPILE_STATUS)) {
+    console.error('An error occurred compiling the fragment shader: ' + gl.getShaderInfoLog(fragmentShader));
+    gl.deleteShader(fragmentShader);
+    return false;
+  }
+
+  const program = gl.createProgram();
+  gl.attachShader(program, vertexShader);
+  gl.attachShader(program, fragmentShader);
+  gl.linkProgram(program);
+  if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+    console.error('Unable to initialize the shader program: ' + gl.getProgramInfoLog(program));
+    return false;
+  }
+
+  gl.useProgram(program);
+  gl.activeTexture(gl.TEXTURE0);
+  gl.bindTexture(gl.TEXTURE_2D, texture);
+  gl.uniform1i(gl.getUniformLocation(program, "uSampler"), 0);
+
+  const vertices = new Float32Array([
+    -1.0, -1.0,
+     1.0, -1.0,
+    -1.0,  1.0,
+     1.0,  1.0,
+  ]);
+  const positionBuffer = gl.createBuffer();
+  gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
+  gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
+  const position = gl.getAttribLocation(program, "aVertexPosition");
+  gl.enableVertexAttribArray(position);
+  gl.vertexAttribPointer(position, 2, gl.FLOAT, false, 0, 0);
+
+  // Копируем текстуру
+  gl.viewport(0, 0, scaledWidth, scaledHeight);
+  gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
+
+  // Чтение пикселей
+  gl.readPixels(0, 0, scaledWidth, scaledHeight, gl.RGBA, gl.UNSIGNED_BYTE, readback_pixels);
+
+  // Освобождаем ресурсы WebGL
+  gl.bindFramebuffer(gl.FRAMEBUFFER, null);
+  gl.deleteFramebuffer(framebuffer);
+  gl.deleteTexture(copyTexture);
+  gl.deleteProgram(program);
+  gl.deleteShader(vertexShader);
+  gl.deleteShader(fragmentShader);
+  gl.deleteBuffer(positionBuffer);
+
+  // Создаем <canvas> элемент
+  let canvas = document.createElement('canvas');
+  canvas.width = scaledWidth;
+  canvas.height = scaledHeight;
+  let context = canvas.getContext('2d');
+
+  // Создаем ImageData и устанавливаем данные пикселей
+  let imageData = new ImageData(new Uint8ClampedArray(readback_pixels), scaledWidth, scaledHeight);
+  context.putImageData(imageData, 0, 0);
+
+  // Получаем данные изображения в формате PNG и инициируем скачивание
+  canvas.toBlob((blob) => {
+    const url = URL.createObjectURL(blob);
+    let link = document.createElement('a');
+    link.href = url;
+    link.download = 'camera_image.png';
+    link.click();
+    URL.revokeObjectURL(url);
+  }, 'image/png');
 }
 
           
