--- a/main.html
+++ b/main.html
@@ -33,8 +33,8 @@
     }
     .info {
       position: absolute;
-      top: 10px;
-      left: 150px;
+      bottom: 10px;
+      right: 150px;
       z-index: 10;
       background: rgba(0, 0, 0, 0.5);
       color: white;
