--- a/main.html
+++ b/main.html
@@ -17,8 +17,8 @@
     /* Styles for the overlay buttons */
     .overlay {
       position: absolute;
-      top: 10px;
-      left: 10px;
+      buttom: 10px;
+      right: 10px;
       z-index: 10;
     }
     .button {
