--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
     /* Styles for the overlay buttons */
     .overlay {
       position: absolute;
-      buttom: 10px;
+      bottom: 10px;
       right: 10px;
       z-index: 10;
     }
