--- a/main.html
+++ b/main.html
@@ -112,11 +112,6 @@
         const pose = frame.getViewerPose(referenceSpace);
         if (pose) {
           const view = pose.views[0];
-          if (captureNext && view.camera) {
-            captureNext = false;
-            dcamera = view.camera;
-            captureImage(gl, glBinding, dcamera);
-          }
 
           const viewport = session.renderState.baseLayer.getViewport(view);
           renderer.setSize(viewport.width, viewport.height);
@@ -133,9 +128,13 @@
             reticle.updateMatrixWorld(true);
           }
 
-          const flowerInScene = scene.children.find(child => child.name === 'sunflower');
+                    if (captureNext && view.camera) {
+            captureNext = false;
+            dcamera = view.camera;
+            captureImage(gl, glBinding, dcamera);
+                      const flowerInScene = scene.children.find(child => child.name === 'sunflower');
           if (flowerInScene) {
-           /* zDistance = flowerInScene.position.y - pose.views[0].transform.position.y;
+            zDistance = flowerInScene.position.y - pose.views[0].transform.position.y;
 
             const cameraOrientation = pose.views[0].transform.orientation;
             const cameraQuaternion = new THREE.Quaternion(cameraOrientation.x, cameraOrientation.y, cameraOrientation.z, cameraOrientation.w);
@@ -147,7 +146,8 @@
             const rotationAxis = new THREE.Vector3().crossVectors(downVector, gravityVector).normalize();
             const rotationQuaternion = new THREE.Quaternion().setFromAxisAngle(rotationAxis, angle);
             const euler = new THREE.Euler().setFromQuaternion(rotationQuaternion, 'XYZ');
-            rotationVector = new THREE.Vector3(euler.x, euler.y, euler.z);*/
+            rotationVector = new THREE.Vector3(euler.x, euler.y, euler.z);
+          }
           }
 
           renderer.render(scene, camera);
