--- a/main.html
+++ b/main.html
@@ -161,7 +161,7 @@
                       
             captureNext = false;
             dcamera = view.camera;
-            captureImage(gl, glBinding, dcamera);
+            //captureImage(gl, glBinding, dcamera);
           }
           }
 
