--- a/main.html
+++ b/main.html
@@ -117,7 +117,7 @@
               
               captureNext = false;
               dcamera = view.camera;
-              //captureImage(gl, glBinding, dcamera);
+              captureImage(gl, glBinding, dcamera);
             }
           }
 
