--- a/main.html
+++ b/main.html
@@ -5,73 +5,22 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AR with WebXR</title>
 
-  <!-- Import map for module imports -->
+  <!-- Import Map -->
   <script type="importmap">
-    {
-      "imports": {
-        "three": "https://unpkg.com/three@0.165.0/build/three.module.js",
-        "three/examples/jsm/loaders/GLTFLoader": "https://unpkg.com/three@0.165.0/examples/jsm/loaders/GLTFLoader.js",
-        "three/examples/jsm/vr/ARButton": "https://unpkg.com/three@0.165.0/examples/jsm/vr/ARButton.js"
-      }
+  {
+    "imports": {
+      "three": "https://unpkg.com/three@0.165.0/build/three.module.js",
+      "three/examples/jsm/loaders/GLTFLoader": "https://unpkg.com/three@0.165.0/examples/jsm/loaders/GLTFLoader.js",
+      "three/examples/jsm/vr/ARButton": "https://unpkg.com/three@0.165.0/examples/jsm/vr/ARButton.js"
     }
+  }
   </script>
 
-  <style>
-    body { margin: 0; overflow: hidden; }
-    canvas { display: block; }
-
-    .overlay {
-      position: absolute;
-      bottom: 10px;
-      right: 10px;
-      z-index: 10;
-    }
-    .button {
-      display: block;
-      margin: 5px 0;
-      padding: 10px;
-      background: rgba(0, 0, 0, 0.5);
-      color: white;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-    .info {
-      position: absolute;
-      bottom: 10px;
-      right: 150px;
-      z-index: 10;
-      background: rgba(0, 0, 0, 0.5);
-      color: white;
-      padding: 10px;
-      border-radius: 5px;
-    }
-    #startARBtn {
-      position: absolute;
-      top: 10px;
-      left: 10px;
-      z-index: 10;
-      background: rgba(0, 0, 0, 0.7);
-      color: white;
-      padding: 10px;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-  </style>
-</head>
-<body>
-  <button id="startARBtn">Start AR</button>
-  <div class="overlay" style="display: none;">
-    <button class="button" id="placeFlowerBtn">Place/Move Flower</button>
-    <button class="button" id="showInfoBtn">Show Info</button>
-  </div>
-  <div class="info" id="info">Information will be displayed here.</div>
-
+  <!-- Three.js -->
   <script type="module">
     import * as THREE from 'three';
-    import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader.js';
-    import { ARButton } from 'three/examples/jsm/vr/ARButton.js';
+    import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader';
+    import { ARButton } from 'three/examples/jsm/vr/ARButton';
 
     let flower, reticle, camera, scene, renderer, session, glBinding;
     let flowerPlaced = false;
@@ -140,6 +89,7 @@
           
           const flowerInScene = scene.children.find(child => child.name === 'sunflower');
           if (flowerInScene) {
+
             if (captureNext && view.camera) {
               zDistance = flowerInScene.position.y - pose.views[0].transform.position.y;
 
@@ -168,7 +118,7 @@
               
               captureNext = false;
               dcamera = view.camera;
-              captureImage(gl, glBinding, dcamera);
+              //captureImage(gl, glBinding, dcamera);
             }
           }
 
@@ -223,18 +173,6 @@
         document.getElementById('info').innerText = 'Flower not found.';
         return;
       }
-
-      /*const radToDeg = 180 / Math.PI;
-      const rotationVectorDegrees = new THREE.Vector3(
-        rotationVector.x * radToDeg,
-        rotationVector.y * radToDeg,
-        rotationVector.z * radToDeg
-      );
-
-      document.getElementById('info').innerText = 
-        `Distance Z: ${zDistance}\n` +
-        `Camera to Gravity Angle: (${rotationVectorDegrees.x.toFixed(2)}°, ${rotationVectorDegrees.y.toFixed(2)}°, ${rotationVectorDegrees.z.toFixed(2)}°)`;
-      */
     }
 
     async function captureImage(gl, glBinding, dcamera) {
@@ -268,29 +206,164 @@
       gl.bindFramebuffer(gl.FRAMEBUFFER, framebuffer);
       gl.framebufferTexture2D(gl.FRAMEBUFFER, gl.COLOR_ATTACHMENT0, gl.TEXTURE_2D, copyTexture, 0);
 
-      // Считываем пиксели
+      if (gl.checkFramebufferStatus(gl.FRAMEBUFFER) !== gl.FRAMEBUFFER_COMPLETE) {
+        console.error("Framebuffer incomplete!");
+        return;
+      }
+
+      // Устанавливаем шейдеры
+      const vertexShaderSource = `
+        attribute vec4 aVertexPosition;
+        varying vec2 vTexCoord;
+        void main(void) {
+          gl_Position = aVertexPosition;
+          vTexCoord = (aVertexPosition.xy + 1.0) / 2.0;
+        }
+      `;
+      const fragmentShaderSource = `
+        precision mediump float;
+        varying vec2 vTexCoord;
+        uniform sampler2D uSampler;
+        void main(void) {
+          gl_FragColor = texture2D(uSampler, vTexCoord);
+        }
+      `;
+
+      const vertexShader = gl.createShader(gl.VERTEX_SHADER);
+      gl.shaderSource(vertexShader, vertexShaderSource);
+      gl.compileShader(vertexShader);
+      if (!gl.getShaderParameter(vertexShader, gl.COMPILE_STATUS)) {
+        console.error('An error occurred compiling the vertex shader: ' + gl.getShaderInfoLog(vertexShader));
+        gl.deleteShader(vertexShader);
+        return;
+      }
+
+      const fragmentShader = gl.createShader(gl.FRAGMENT_SHADER);
+      gl.shaderSource(fragmentShader, fragmentShaderSource);
+      gl.compileShader(fragmentShader);
+      if (!gl.getShaderParameter(fragmentShader, gl.COMPILE_STATUS)) {
+        console.error('An error occurred compiling the fragment shader: ' + gl.getShaderInfoLog(fragmentShader));
+        gl.deleteShader(fragmentShader);
+        return;
+      }
+
+      const program = gl.createProgram();
+      gl.attachShader(program, vertexShader);
+      gl.attachShader(program, fragmentShader);
+      gl.linkProgram(program);
+      if (!gl.getProgramParameter(program, gl.LINK_STATUS)) {
+        console.error('Unable to initialize the shader program: ' + gl.getProgramInfoLog(program));
+        return;
+      }
+
+      gl.useProgram(program);
+      gl.activeTexture(gl.TEXTURE0);
+      gl.bindTexture(gl.TEXTURE_2D, texture);
+      gl.uniform1i(gl.getUniformLocation(program, "uSampler"), 0);
+
+      const vertices = new Float32Array([
+        -1.0, -1.0,
+         1.0, -1.0,
+        -1.0,  1.0,
+         1.0,  1.0,
+      ]);
+      const positionBuffer = gl.createBuffer();
+      gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
+      gl.bufferData(gl.ARRAY_BUFFER, vertices, gl.STATIC_DRAW);
+      const position = gl.getAttribLocation(program, "aVertexPosition");
+      gl.enableVertexAttribArray(position);
+      gl.vertexAttribPointer(position, 2, gl.FLOAT, false, 0, 0);
+
+      // Копируем текстуру
+      gl.viewport(0, 0, scaledWidth, scaledHeight);
+      gl.drawArrays(gl.TRIANGLE_STRIP, 0, 4);
+
+      // Чтение пикселей
       gl.readPixels(0, 0, scaledWidth, scaledHeight, gl.RGBA, gl.UNSIGNED_BYTE, readbackPixels);
 
-      // Создаем изображение из данных пикселей
-      const imageData = new ImageData(new Uint8ClampedArray(readbackPixels.buffer), scaledWidth, scaledHeight);
-      const canvas = document.createElement('canvas');
-      canvas.width = scaledWidth;
-      canvas.height = scaledHeight;
-      const ctx = canvas.getContext('2d');
-      ctx.putImageData(imageData, 0, 0);
-
-      // Создаем ссылку для скачивания изображения
-      const link = document.createElement('a');
-      link.href = canvas.toDataURL('image/png');
-      link.download = 'camera_image.png';
-      link.click();
-
-      // Очистка ресурсов
+      // Освобождаем ресурсы WebGL
+      gl.bindFramebuffer(gl.FRAMEBUFFER, null);
       gl.deleteFramebuffer(framebuffer);
       gl.deleteTexture(copyTexture);
+      gl.deleteProgram(program);
+      gl.deleteShader(vertexShader);
+      gl.deleteShader(fragmentShader);
+      gl.deleteBuffer(positionBuffer);
+
+      // Создаем <canvas> элемент
+      let canvas = document.createElement('canvas');
+      canvas.width = scaledWidth;
+      canvas.height = scaledHeight;
+      let context = canvas.getContext('2d');
+
+      // Создаем ImageData и устанавливаем данные пикселей
+      let imageData = new ImageData(new Uint8ClampedArray(readbackPixels), scaledWidth, scaledHeight);
+      context.putImageData(imageData, 0, 0);
+
+      // Получаем данные изображения в формате PNG и инициируем скачивание
+      canvas.toBlob((blob) => {
+        const url = URL.createObjectURL(blob);
+        let link = document.createElement('a');
+        link.href = url;
+        link.download = 'camera_image.png';
+        link.click();
+        URL.revokeObjectURL(url);
+      }, 'image/png');
     }
 
     document.getElementById('startARBtn').addEventListener('click', startAR);
   </script>
+
+  <style>
+    body { margin: 0; overflow: hidden; }
+    canvas { display: block; }
+
+    .overlay {
+      position: absolute;
+      bottom: 10px;
+      right: 10px;
+      z-index: 10;
+    }
+    .button {
+      display: block;
+      margin: 5px 0;
+      padding: 10px;
+      background: rgba(0, 0, 0, 0.5);
+      color: white;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+    .info {
+      position: absolute;
+      bottom: 10px;
+      right: 150px;
+      z-index: 10;
+      background: rgba(0, 0, 0, 0.5);
+      color: white;
+      padding: 10px;
+      border-radius: 5px;
+    }
+    #startARBtn {
+      position: absolute;
+      top: 10px;
+      left: 10px;
+      z-index: 10;
+      background: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 10px;
+      border: none;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+  </style>
+</head>
+<body>
+  <button id="startARBtn">Start AR</button>
+  <div class="overlay" style="display: none;">
+    <button class="button" id="placeFlowerBtn">Place/Move Flower</button>
+    <button class="button" id="showInfoBtn">Show Info</button>
+  </div>
+  <div class="info" id="info">Information will be displayed here.</div>
 </body>
 </html>
